fixing last